# strands-agents-study

./: .env.example  CLAUDE.md  README.md  agent.py  agent2.py  pyproject.toml  sample_input.txt
.claude/: mcp.json
draft/: README-langsmith-integration.md  requirements-langsmith.txt  strands-langsmith-advanced.py  strands-langsmith-integration.py
repl_state/: repl_state.pkl
