[project]
name = "strands-agents-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=0.1.7",
    "strands-agents-builder>=0.1.3",
    "strands-agents-tools>=0.1.5",
    "python-dotenv>=1.0.0",
    "litellm>=1.72.4",
]
